# wrath-rs

./: CONTRIBUTING.md  Cargo.toml  docker-compose.yml  readme.md  reset_db.bat
.githooks/: pre-commit
.github/workflows/: main.yaml
auth_server/: .env.template  Cargo.toml
auth_server/src/: client_manager.rs  main.rs  realms.rs  state.rs
databases/wrath-auth-db/: .env.template  Cargo.toml
databases/wrath-game-db/: .env.template  Cargo.toml
databases/wrath-game-db/migrations/: 20200919183322_setup.sql
databases/wrath-game-db/src/: areatrigger_restedzone.rs  areatrigger_teleport.rs  item_template.rs  lib.rs  player_create_info.rs
databases/wrath-realm-db/: Cargo.toml
databases/wrath-realm-db/.sqlx/: query-218084956bcb77507f7649f3d45f8f285d677d8659a7c766250833b54c09f5f6.json  query-221aff4b6d7cce9d65677ca846be5aec848b200d827798510e707557d211ccce.json  query-5cd7b2f40b1adf7549e4821786723b99c23e70b149d9e67efac42e6269f525fd.json  query-731fa2721b38d09851e922dc41006abc0093befd508d6db5f55bf2378e5799f3.json  query-c7f2651d3dddaa3bac32580860f6ed5fe72dfbcc97e4d29158b285a28d616b1c.json  query-d3fd62440a31825f63976130bbe1982eb174591193f55157894e2968197203c9.json  query-d4117539374f2598bbbafab18bc9b0e546075107450a18b1997a54fa9e03a618.json  query-e577ddcd08a3d27f3739da092b54743a0c33291f328e799d1127a55878e697c5.json
databases/wrath-realm-db/src/: character.rs  (+2 more)
docker/: docker-setup.sh
tools/dbc-extractor/: Cargo.toml
world_server/: .env.template  Cargo.toml
world_server/src/: client.rs  client_manager.rs  connections.rs  main.rs  packet.rs  packet_handler.rs
(+34 files in other folders)
